@@ -1,34 +1,62 @@
 package com.example.movieclub.domain.movie;
 
+import com.example.movieclub.domain.genre.Genre;
+import com.example.movieclub.domain.genre.GenreRepository;
 import com.example.movieclub.domain.movie.dto.MovieDto;
+import com.example.movieclub.domain.movie.dto.MovieSaveDto;
+import com.example.movieclub.domain.storage.FileStorageService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 @Service
 public class MovieService {
 
     private final MovieRepository movieRepository;
+    private final GenreRepository genreRepository;
+    private final FileStorageService fileStorageService;
 
-    public MovieService(MovieRepository movieRepository) {
+    public MovieService(MovieRepository movieRepository,
+                        GenreRepository genreRepository,
+                        FileStorageService fileStorageService) {
         this.movieRepository = movieRepository;
+        this.genreRepository = genreRepository;
+        this.fileStorageService = fileStorageService;
     }
 
-    public List<MovieDto> findAllPromotedMovies(){
+    public List<MovieDto> findAllPromotedMovies() {
         return movieRepository.findAllByPromotedIsTrue().stream()
-                .map(movie -> MovieDtoMapper.map(movie))
-                .collect(Collectors.toList());
+                .map(MovieDtoMapper::map)
+                .toList();
     }
 
-    public Optional<MovieDto> findMovieById(long id){
-        return movieRepository.findById(id).map(movie -> MovieDtoMapper.map(movie));
+    public Optional<MovieDto> findMovieById(long id) {
+        return movieRepository.findById(id).map(MovieDtoMapper::map);
     }
 
-    public List<MovieDto> findMoviesByGenreName(String genre){
+    public List<MovieDto> findMoviesByGenreName(String genre) {
         return movieRepository.findAllByGenre_NameIgnoreCase(genre).stream()
-                .map(movie -> MovieDtoMapper.map(movie))
-                .collect(Collectors.toList());
+                .map(MovieDtoMapper::map)
+                .toList();
+    }
+
+    public void addMovie(MovieSaveDto movieToSave) {
+        Movie movie = new Movie();
+        movie.setTitle(movieToSave.getTitle());
+        movie.setOriginalTitle(movieToSave.getOriginalTitle());
+        movie.setPromoted(movieToSave.isPromoted());
+        movie.setReleaseYear(movieToSave.getReleaseYear());
+        movie.setShortDescription(movieToSave.getShortDescription());
+        movie.setDescription(movieToSave.getDescription());
+        movie.setYoutubeTrailerId(movieToSave.getYoutubeTrailerId());
+        Genre genre = genreRepository.findByNameIgnoreCase(movieToSave.getGenre()).orElseThrow();
+        movie.setGenre(genre);
+        if (movieToSave.getPoster() != null) {
+            String savedFileName = fileStorageService.saveImage(movieToSave.getPoster());
+            movie.setPoster(savedFileName);
+        }
+        movieRepository.save(movie);
     }
 }
